--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> 
     </head>
     <body>
         <div id="appDiv"></div>
