Removed marked library

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> 
+        <meta charset="utf-8" />
+        <!--<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
     </head>
     <body>
         <div id="appDiv"></div>
+        <div id="content"></div>
     </body>
 </html>
