--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <!--<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
-    </head>
-    <body>
-        <div id="appDiv"></div>
-        <div id="content"></div>
-    </body>
+
+<head></head>
+
+<body>
+  <div id='root'></div>
+</body>
+
 </html>
